--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -9,5 +9,25 @@
   "LANGUAGE": {
     "SWITCH": "Zu Deutsch wechseln",
     "SWITCH_BACK": "Zu Englisch wechseln"
+  },
+  "TYPES": {
+    "normal": "Normal",
+    "fire": "Feuer",
+    "water": "Wasser",
+    "electric": "Elektro",
+    "grass": "Pflanze",
+    "ice": "Eis",
+    "fighting": "Kampf",
+    "poison": "Gift",
+    "ground": "Boden",
+    "flying": "Flug",
+    "psychic": "Psycho",
+    "bug": "Käfer",
+    "rock": "Gestein",
+    "ghost": "Geist",
+    "dragon": "Drache",
+    "dark": "Unlicht",
+    "steel": "Stahl",
+    "fairy": "Fee"
   }
 }
