--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,25 @@
   "LANGUAGE": {
     "SWITCH": "Switch to German",
     "SWITCH_BACK": "Switch to English"
+  },
+  "TYPES": {
+    "normal": "Normal",
+    "fire": "Fire",
+    "water": "Water",
+    "electric": "Electric",
+    "grass": "Grass",
+    "ice": "Ice",
+    "fighting": "Fighting",
+    "poison": "Poison",
+    "ground": "Ground",
+    "flying": "Flying",
+    "psychic": "Psychic",
+    "bug": "Bug",
+    "rock": "Rock",
+    "ghost": "Ghost",
+    "dragon": "Dragon",
+    "dark": "Dark",
+    "steel": "Steel",
+    "fairy": "Fairy"
   }
 }
