Add loading and load more messages to Pokémon list translations

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -4,7 +4,9 @@
     "NO_POKEMON": "Keine Pokémon gefunden",
     "TYPES": "Typen",
     "ABILITIES": "Fähigkeiten",
-    "MOVES": "Attacken"
+    "MOVES": "Attacken",
+    "LOAD_MORE": "Mehr Pokémon laden",
+    "LOADING_MORE": "Lade mehr..."
   },
   "LANGUAGE": {
     "SWITCH": "Zu Deutsch wechseln",
