Add "Load all Pokémon" message to localization files for German and English

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,7 +6,8 @@
     "ABILITIES": "Fähigkeiten",
     "MOVES": "Attacken",
     "LOAD_MORE": "Mehr Pokémon laden",
-    "LOADING_MORE": "Lade mehr..."
+    "LOADING_MORE": "Lade mehr...",
+    "LOAD_ALL": "Alle Pokémon laden"
   },
   "LANGUAGE": {
     "SWITCH": "Zu Deutsch wechseln",
